# infection-monkey-cookiecutter

./: README.md  cookiecutter.json  cookiecutter_plugin.json
agent_plugin/: cookiecutter.json
agent_plugin/{{ cookiecutter.project_name }}/: .gitignore  CHANGELOG.md  README.md  manifest.yaml  vulture_allowlist.py  {% if cookiecutter.license=="Apache" %}LICENSE{% endif %}  {% if cookiecutter.license=="MIT" %}LICENSE{% endif %}
agent_plugin/{{ cookiecutter.project_name }}/{{ cookiecutter.__project_slug }}/: {% if cookiecutter.__project_type=="agent_plugin" and cookiecutter.plugin_type=="Payload" %}plugin.py{% endif %}  {% if cookiecutter.plugin_type=="Exploiter" %}plugin.py{% endif %}
generic/{{cookiecutter.project_name}}/: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  poetry.toml  pyproject.toml  {% if cookiecutter.license=="GPLv3" %}LICENSE{% endif %}
hooks/: post_gen_project.py  pre_prompt.py
templates/: cookiecutter.json  pyproject.toml.template
{{cookiecutter.project_name}}/: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  {% if cookiecutter.__project_type=="agent_plugin" %}manifest.yaml{% endif %}  {% if cookiecutter.__project_type=="plugin" %}manifest.yaml{% endif %}  {% if cookiecutter.travis_ci=="y" %}.travis.yaml{% endif %}
{{cookiecutter.project_name}}/docs/source/: conf.py  index.rst
{{cookiecutter.project_name}}/scripts/: run_vulture.py
{{cookiecutter.project_name}}/{{ cookiecutter.__project_slug }}/: {% if cookiecutter.__project_type=="agent_plugin" %}plugin.py{% endif %}  {% if cookiecutter.__project_type=="agent_plugin" and cookiecutter.__plugin_type=="Credentials_Collector" %}plugin.py{% endif %}  {% if cookiecutter.__project_type=="agent_plugin" and cookiecutter.__plugin_type=="Exploiter" %}plugin.py{% endif %}  {% if cookiecutter.__project_type=="agent_plugin" and cookiecutter.__plugin_type=="Payload" %}plugin.py{% endif %}  {% if cookiecutter.__project_type=="agent_plugin" and cookiecutter.plugin_type=="Credentials_Collector" %}plugin.py{% endif %}  {% if cookiecutter.__project_type=="agent_plugin" and cookiecutter.plugin_type=="Exploiter" %}plugin.py{% endif %}  {% if cookiecutter.__project_type=="agent_plugin" and cookiecutter.plugin_type=="Payload" %}plugin.py{% endif %}
